# 3d-arena-game

./: README.md  index.html  package-lock.json  package.json
backend/: game_logic.py  requirements.txt  server.py
cpp/: CMakeLists.txt  README.md  build.py  cpp_logic.cpp
frontend/: index.html  main.js  style.css
